--- a/frontend/src/assets/layout/css/layout-teal.scss
+++ b/frontend/src/assets/layout/css/layout-teal.scss
@@ -1,4 +1,4 @@
-$primaryColor: #009688;
+$primaryColor: #0267B0;
 $primaryDarkColor: #00695C;
 $primaryLightColor: #80CBC4;
 $accentColor: #CDDC39;
@@ -8,7 +8,7 @@ $accentTextColor: #212121;
 $darkMenuBgColor: #424242;
 $darkMenuHoverColor: #676767;
 $darkMenuRouterLinkActiveColor: #CDDC39;
-$lightMenuRouterLinkActiveColor: #009688;
+$lightMenuRouterLinkActiveColor: #0267B0;
 $horizontalLightMenuRouterLinkActiveColor: #CDDC39;
 
 @import '../../sass/layout/_layout';
