--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -22,7 +22,7 @@
     <div class="layout-main">
         
         <div class="layout-content">
-            <breadcrumb></breadcrumb>
+            <!-- <breadcrumb></breadcrumb> -->
             <router-outlet></router-outlet>
         </div>
         <app-footer></app-footer>
