--- a/frontend/src/app/app.topbar.component.html
+++ b/frontend/src/app/app.topbar.component.html
@@ -12,7 +12,7 @@
                 </a>
             </div>  
             <div class="logo" routerLink="/">
-                <img src="../assets/layout/images/logo.png">
+                <img src="../assets/layout/images/logo.png" style="margin-top: 8px;">
             </div>
         </div>          
     </div> 
