--- a/frontend/src/assets/theme/teal/theme-light.css
+++ b/frontend/src/assets/theme/teal/theme-light.css
@@ -1408,6 +1408,11 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
   font-size: 1rem;
   transition: background-color 0.2s, border-color 0.2s, color 0.2s, box-shadow 0.2s, background-size 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
   border-radius: 4px;
+  width: 208px;
+  height: 42px;
+  display: inline;
+  margin-left: 10px;
+  margin-top: 5px;
 }
 .p-button:enabled:hover {
   background: rgba(0, 150, 136, 0.92);
