--- a/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
+++ b/frontend/src/app/consulta/components/consulta-calendario/detalha-consulta.component.html
@@ -7,6 +7,7 @@
                 <span class="p-float-label">
                     <input field="prontuario" pInputText formControlName="prontuario" readonly />
                     <label>Prontuário</label>
+                    <img src="../assets/layout/images/logo-madre-cinza-bg 1.png">
                 </span>
             </div>
             <div class="p-md-4 p-sm-12">
