--- a/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
+++ b/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
@@ -110,7 +110,7 @@
     
                 <basis-datatable-button
                     ng-reflect-icon="pi pi-remove-red-eye"
-                    ng-reflect-b-tooltip="Escolha um registro para visualizar"
+                    ng-reflect-b-tooltip="Escolha um registro para"
                     class="ng-star-inserted"
                     [disabled]="datatable.selectedRow == null"
                     name="view"
