--- a/frontend/src/app/pacientes/formulario/paciente-list.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-list.component.html
@@ -1,16 +1,23 @@
 
 <div class="card card-w-title">
-    <h1>Pacientes</h1>
+    <h1>Pesquisa de Pacientes</h1>
+    
         <nCrudList [form]="paciente" [datatableParams]="datatableParams">
             <p-column header="Prontuário" field="prontuario"></p-column>
+
             <p-column header="Nome" field="nome"></p-column>
+
             <p-column header="Nome da Mãe" field="genitores">
+
                 <ng-template let-data="rowData" pTemplate="body">
+
                     {{ data['genitores']?.nomeDaMae }}
                 </ng-template>
             </p-column>
             <p-column header="Data de Nascimento" field="dataDeNascimento"></p-column>
+
             <p-column header="Nº Cartão SUS" field="cartaoSUS">
+
                 <ng-template let-data="rowData" pTemplate="body">
                     {{ data['cartaoSUS']?.numero }}
                 </ng-template>
