--- a/frontend/src/assets/layout/css/layout-teal.css
+++ b/frontend/src/assets/layout/css/layout-teal.css
@@ -69,9 +69,14 @@
   padding-bottom: 2em;
 }
 .card h1 {
-  font-size: 1.5em;
-  font-weight: 400;
-  margin: 1em 0;
+  font-family: Open Sans;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: 0.20000000298023224px;
+  text-align: left;
+  
 }
 .card h1:first-child {
   margin-top: 0.667em;
@@ -274,7 +279,7 @@
 .splash-screen {
   width: 100%;
   min-height: 100%;
-  background-color: #009688;
+  background-color: #02487B;
   position: absolute;
 }
 
@@ -409,7 +414,7 @@
   background-color: #4527A0;
 }
 .dashboard .colorbox.colorbox-4 {
-  background-color: #009688;
+  background-color: #02487B;
 }
 .dashboard .colorbox.colorbox-4 div:first-child {
   background-color: #00695C;
@@ -1195,7 +1200,7 @@ body a {
   z-index: 100;
   width: 100%;
   height: 75px;
-  background-color: #009688;
+  background-color: #02487B;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
@@ -1597,7 +1602,7 @@ body a {
   font-size: 20px;
 }
 .layout-container .layout-breadcrumb ul li:first-child(even) {
-  color: #009688;
+  color: #02487B;
 }
 .layout-container .layout-breadcrumb ul li a {
   color: #757575;
@@ -1675,10 +1680,10 @@ body a {
   vertical-align: middle;
 }
 .layout-container .ultima-menu li a.active-menuitem-routerlink {
-  color: #009688;
+  color: #02487B;
 }
 .layout-container .ultima-menu li a.active-menuitem-routerlink > i {
-  color: #009688;
+  color: #02487B;
 }
 .layout-container .ultima-menu li a.active-menuitem-routerlink:hover {
   color: #212121;
@@ -1687,11 +1692,11 @@ body a {
   color: #757575;
 }
 .layout-container .ultima-menu li.active-menuitem > a {
-  color: #009688;
+  color: #02487B;
   background-color: #e8e8e8;
 }
 .layout-container .ultima-menu li.active-menuitem > a i {
-  color: #009688;
+  color: #02487B;
 }
 .layout-container .ultima-menu li.active-menuitem > a i:last-child {
   -webkit-transform: rotate(-180deg);
@@ -1900,7 +1905,7 @@ body a {
     -moz-box-shadow: none;
   }
   .layout-container.menu-layout-horizontal .topbar .topbar-left {
-    background-color: #009688;
+    background-color: #02487B;
     box-shadow: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
@@ -1999,7 +2004,7 @@ body a {
     padding-left: 96px;
   }
   .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > ul li.active-menuitem > a {
-    color: #009688;
+    color: #02487B;
     background-color: #e8e8e8;
   }
   .layout-container.menu-layout-horizontal .layout-menu ul.ultima-menu > li > ul li.active-menuitem > ul {
@@ -2271,7 +2276,7 @@ body a {
     vertical-align: middle;
   }
   .layout-container .topbar .topbar-right .topbar-items > li.active-top-menu > a {
-    color: #009688;
+    color: #02487B;
   }
   .layout-container .topbar .topbar-right .topbar-items > li.active-top-menu > ul {
     display: block;
@@ -2280,7 +2285,7 @@ body a {
     padding-left: 32px;
   }
   .layout-container .topbar .topbar-right .topbar-items > li.search-item input {
-    background-image: linear-gradient(to bottom, #009688, #009688), linear-gradient(to bottom, #34e2d2, #34e2d2);
+    background-image: linear-gradient(to bottom, #02487B, #02487B), linear-gradient(to bottom, #34e2d2, #34e2d2);
   }
   .layout-container .topbar .topbar-right .topbar-items > li.search-item {
     text-align: center;
@@ -2305,7 +2310,7 @@ body a {
   .layout-container .topbar .topbar-right .topbar-items > li.search-item input:focus ~ label,
 .layout-container .topbar .topbar-right .topbar-items > li.search-item input.p-state-filled ~ label {
     top: -20px;
-    color: #009688;
+    color: #02487B;
   }
   .layout-container .topbar .topbar-right .topbar-items > li.search-item label {
     top: 1px;
