--- a/frontend/src/assets/theme/teal/theme-dark.css
+++ b/frontend/src/assets/theme/teal/theme-dark.css
@@ -20,9 +20,14 @@
 }
 
 .p-component {
-  font-family: Roboto, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
-  font-size: 1rem;
-  font-weight: normal;
+  font-family: Open Sans;
+  font-size: 14px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 16px;
+  letter-spacing: 0;
+  text-align: left;
+}
 }
 
 .p-component-overlay {
