--- a/frontend/src/assets/theme/teal/theme-light.scss
+++ b/frontend/src/assets/theme/teal/theme-light.scss
@@ -1,4 +1,4 @@
-$primaryColor:#009688;
+$primaryColor:#02487B;
 $primaryLightestColor: #E0F2F1;
 $primaryMenuTextColor: $primaryColor;
 $primaryTextColor:#ffffff;
