--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -180,7 +180,7 @@
 }
 
 .p-accordion .p-accordion-header-link {
-    background-color: #00796B !important;
+    background: linear-gradient(180deg, #0272C3 0%, #0267B0 100%) !important;
     color: #ffffff !important;
     font-size: 1em;
     -moz-transition: background-color 0.3s;
@@ -191,8 +191,8 @@
 }
 
 .p-accordion .p-accordion-tab-active .p-accordion-header-link {
-    background-color: #CDDC39 !important;
-    color: #212121 !important;
+    background-color: rgba(31, 170, 238, 1);
+    color: #FFFFFF;
 }
 
 p-inputmask {
